--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "next-auth": "^4.3.1",
+    "react-google-login": "5.2.2"
   },
   "devDependencies": {
     "eslint": "8.13.0",
