--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-google-login": "5.2.2",
-    "react-switch": "^6.0.0"
+    "react-switch": "^6.0.0",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
