--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-google-login": "5.2.2",
+    "react-reveal": "^1.2.2",
+    "react-simple-typewriter": "^3.0.1",
     "react-switch": "^6.0.0",
     "react-toastify": "^8.2.0"
   },
